Fix menu text alignment

--- a/src/components/menu.scss
+++ b/src/components/menu.scss
@@ -25,6 +25,7 @@ body:not(.is-mobile) .suggestion-container {
     border-radius: 4px;
     padding: var(--size-4-1) var(--size-4-2);
     font-size: var(--font-ui-small);
+    align-items: center;
   }
   .menu-item.selected:not(.is-label):not(.is-disabled),
   .suggestion-item.is-selected:not(.mod-group) {
